--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
-        whit:
+        with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_USER }}
       - name: Checkout
